# Work_with_API_hh.ru

./: README.md  config.py  main.py  pyproject.toml
data/: vacancies.json  vacancy.json
src/: Abstract_class_hh.py  Abstract_class_json.py  Get_API_hh.py  Json_saver.py  Vacancy.py
tests/: test_Json_saver.py  test_fixture.py  test_get_API_hh.py  test_vacancy.py
