[tool.poetry]
name = "work-with-api-hh-ru"
version = "0.1.0"
description = ""
authors = ["Kirill Dmitruk <dmitruk.ks@mail.ru>"]
readme = "README.md"
packages = [{include = "work_with_api_hh"}]

[tool.poetry.dependencies]
python = "3.12.1"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
